# perceptron

./: .gitattributes  .gitignore  .pre-commit-config.yaml  01-PROMPT.md  02-NUMERICAL-NOTES.md  03-CORRECTNESS-IS-NOT-COMPOSITIONAL.md  04-HUMAN-IN-THE-LOOP-IS-NOT-A-CHECKBOX.md  CLAUDE.md  PITCH-SMR.md  README.md  index.html  ledger-add.sh  ledger-finalize.sh  ledger-rewrite.sh  ledger-seal.sh  package-lock.json  package.json  prevent-commits-to-default-branch.sh  vite.config.js
manim/: Makefile  README.md  pyproject.toml
manim/scenes/: part1_weight_emergence.py  part2_warp_canonical.py
manim/scripts/: fix-pycairo.sh
src/: IndexPage.jsx  PerceptronDissected.jsx  WallAndWarp.jsx  index.css  main.jsx
